# hands-on-overfitting

./: README.md  exercise.ipynb  exercise_jmn.ipynb  hands_on_demo.ipynb  pyproject.toml
docs/: nn.drawio  svm.drawio
src/: classifiers.py  image_data.py  polynomial_data.py  polynomial_model.py  polynomial_visualization.py
