[tool.poetry]
name = "hands-on-overfitting"
version = "0.1.0"
description = ""
authors = ["Paul Trygsland <paul.trygsland@bouvet.no>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scipy = "^1.11.4"
matplotlib = "^3.8.2"
jupyterlab = "^4.0.9"
ipywidgets = "^8.1.1"
scikit-learn = "^1.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
